@@ -2,10 +2,12 @@ version 0.5.3 - dd-mmm-yyyy
  . CocosNode: added numberOfRunningActions (issue #72)
  . CocosNode: removeAll, remove fixes (issue #74)
  . CocosNode: stopAction fix (issue #82)
+ . CocosNode: supports scaleX and scaleY (issue #53)
  . Layer: isTouchEnabled, isAccelerometerEnabled are properties (issue #70)
  . Menu: supports CocosNodeOpacity protocol (issue #76)
  . MultiplexLayer: added switchToAndReleaseMe (issue #71)
  . TextureMgr: Simulator supports PVRTC images (issue #75)
+ . TileMapAtlas: supports TGA RLE format (issue #38)
 
 version 0.5.2 - 04-Nov-2008
  . All: assign [super init] to self (issue #61)
